--- a/views/contacto.html
+++ b/views/contacto.html
@@ -35,8 +35,9 @@
 		</div>
 	</aside>
 	<article class=" main contacto">
+		<h1 class="prod-dest">Contacto</h1>
 		<div>
-			<form action="envio.php" id="contacto">
+		<form action="envio.php" id="contacto">
 			<fieldset class="contacto-form">
 				 <legend>Info personal</legend>
 				 <label for="name">Nombre<label>
@@ -50,7 +51,7 @@
 
 			</fieldset>
 			<fieldset class="contacto-form">
-				<legend>Info de pedido</legend
+				<legend>Info de pedido</legend>
 				<label for="Cervezas">Cervezas</label>
 				<input type="checkbox"id= Cervezas ="Cervezas"> 
 				<br>
