--- a/views/preguntas.html
+++ b/views/preguntas.html
@@ -36,7 +36,7 @@
 	</aside>
 	<article class="main ">
 		<section class="preguntas" >
-			<h3>¿Como Comprar?</h3>
+			<h3 class="imp">¿Como Comprar?</h3>
 	   		<p>
 	   		Elige el producto que deseas comprar.
             Haz clic en el botón de "Agregar al carrito". Esto agregará el producto a tu carrito y te llevará al mismo.	<br>
@@ -53,11 +53,11 @@
 	         </p>
 
 		
-			<h3>Medios de Pago</h3>
+			<h3 class="imp">Medios de Pago</h3>
 
 			<p>Utilizamos la plataforma de pago de Mercadopago. Podés pagar con todos los medios de pago disponibles en la misma (Tarjeta de Crédito, Tarjeta de Débido, Dinero en cuenta, Efectivo).</p>
 			
-			<h3>Envíos</h3>
+			<h3 class="imp">Envíos</h3>
 
 			<p>Los envíos se realizan de Lunes a Viernes de 8 a 17 hs. Aproximadamente entre 2 y 4 días hábiles después de realizada la compra, dependiendo el transporte indicado.</p>
 			
